--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "dev": "nodemon --watch src/**/*.ts --exec 'ts-node' src index.ts"
+        "dev": "nodemon --exec ts-node src/index.ts "
     },
     "keywords": [],
     "author": "behova",
@@ -17,10 +17,12 @@
         "nodemon": "^2.0.20",
         "prisma": "^4.8.0",
         "supertest": "^6.3.3",
+        "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     },
     "dependencies": {
-        "@prisma/client": "^4.8.0"
+        "@prisma/client": "^4.8.0",
+        "puppeteer": "^19.4.1"
     }
 }
