put prisma client in place. added file verification to scraper

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://[user-name]:[password]@[host-url]:[port]/[db-name]?connect_timeout=10&sslmode=require"
+IMAGES_PATH="/absolute/path/to/save/image/files/locally"
