--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     },
     "dependencies": {
         "@prisma/client": "^4.8.0",
-        "puppeteer": "^19.4.1"
+        "@types/sharp": "^0.31.1",
+        "axios": "^1.2.2",
+        "dotenv": "^16.0.3",
+        "nanoid": "^3.3.4",
+        "puppeteer": "^19.4.1",
+        "sharp": "^0.31.3"
     }
 }
