--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "dev": "nodemon --exec ts-node src/index.ts "
+        "dev": "nodemon --exec ts-node-esm src/index.ts "
     },
     "keywords": [],
     "author": "behova",
     "license": "ISC",
+    "type": "module",
     "devDependencies": {
         "@types/jest": "^29.2.4",
         "@types/node": "^18.11.18",
@@ -24,10 +25,12 @@
     "dependencies": {
         "@prisma/client": "^4.8.0",
         "@types/cron": "^2.0.0",
+        "@types/get-folder-size": "^3.0.1",
         "@types/sharp": "^0.31.1",
         "axios": "^1.2.2",
         "cron": "^2.2.0",
         "dotenv": "^16.0.3",
+        "get-folder-size": "^4.0.0",
         "nanoid": "^3.3.4",
         "puppeteer": "^19.4.1",
         "sharp": "^0.31.3"
