--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "module": "ESNext",
+        "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
         "strict": true,
