--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "dev": "nodemon --exec ts-node-esm src/index.ts "
+        "start": "node dist/index.js",
+        "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
+        "build": "tsc",
+        "postinstall": "npm run build"
     },
     "keywords": [],
     "author": "behova",
@@ -15,7 +18,6 @@
         "@types/jest": "^29.2.4",
         "@types/node": "^18.11.18",
         "jest": "^29.3.1",
-        "nodemon": "^2.0.20",
         "prisma": "^4.8.0",
         "supertest": "^6.3.3",
         "ts-jest": "^29.0.3",
@@ -33,6 +35,7 @@
         "get-folder-size": "^4.0.0",
         "nanoid": "^3.3.4",
         "puppeteer": "^19.4.1",
-        "sharp": "^0.31.3"
+        "sharp": "^0.31.3",
+        "tsc-watch": "^6.0.0"
     }
 }
