--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "module": "ESNext",
         "moduleResolution": "node",
+        "target": "ESNext",
         "sourceMap": true,
         "outDir": "dist",
         "strict": true,
-        "lib": ["ESNext"],
+        "lib": ["ESNext", "DOM"],
         "esModuleInterop": true
     }
 }
