--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+NODE_ENV=development
+
 DATABASE_URL="postgresql://[user-name]:[password]@[host-url]:[port]/[db-name]?connect_timeout=10&sslmode=require"
 IMAGES_PATH="/absolute/path/to/save/image/files/locally"
