--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@
 NODE_ENV=development
 
 DATABASE_URL="postgresql://[user-name]:[password]@[host-url]:[port]/[db-name]?connect_timeout=10&sslmode=require"
-IMAGES_PATH="/absolute/path/to/save/image/files/locally"
+IMAGES_PATH=/absolute/path/to/save/image/files/locally
