--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "start": "node dist/index.js",
+        "start": "node --inspect dist/index.js",
         "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
         "build": "tsc",
         "postinstall": "npm run build"
@@ -32,6 +32,7 @@
         "axios": "^1.2.2",
         "cron": "^2.2.0",
         "dotenv": "^16.0.3",
+        "envalid": "^7.3.1",
         "get-folder-size": "^4.0.0",
         "nanoid": "^3.3.4",
         "puppeteer": "^19.4.1",
