shortend image names. added cron variables to env

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,23 @@
 NODE_ENV=development
 
 DATABASE_URL="postgresql://[user-name]:[password]@[host-url]:[port]/[db-name]?connect_timeout=10&sslmode=require"
+
+#production
+# NODE_ENV=production
+# IMAGES_PATH=/absolute/path/to/save/image/files/locally
+# SCRAPER_SCHEDULE=0 0 */4 * * *
+# CULL_SCHEDULE=0 0 2 * * *
+# DELAY_MIN=300000
+# DELAY_MAX=3.6e6
+# #size to cull images at (bytes)
+# SIZE_TO_CULL=3e10
+
+#development
+NODE_ENV=development
 IMAGES_PATH=/absolute/path/to/save/image/files/locally
+SCRAPER_SCHEDULE=0 */10 * * * *
+CULL_SCHEDULE=0 0 2 * * *
+DELAY_MIN=300000
+DELAY_MAX=310000
+#size to cull images at (bytes)
+SIZE_TO_CULL=3e10
